--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table>
     <tr>
-      <td> <img src="https://media-exp1.licdn.com/dms/image/C5603AQEXxGNV9Qa2YA/profile-displayphoto-shrink_200_200/0/1614939992810?e=1643846400&v=beta&t=bZxG4BW6D42LAvc9tng4fM9vBv4iimXw-K2bjCXJqwc" alt="Img" /></td>
+      <td> <img src="no_img" alt="Img" /></td>
       <td>
         <h1>Dominic Liebel</h1>
         <em>
