--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <td>
         <h1>Dominic Liebel</h1>
         <em>
-          <p>Contract Admin at <strong><a href="file:img.png">Siemens Healthineers</a></strong></p>
+          <p>Contract Admin at <strong><a href="https://www.google.com/">Siemens Healthineers</a></strong></p>
         </em>
         <p>Learning web development. </p>
         <hr>
